can iterate over all pdfs and create dataset

--- a/Project testing.ipynb
+++ b/Project testing.ipynb
@@ -110,7 +110,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zip_list = list()\n",
+    "\n",
+    "# Creates a list of all possible zip codes\n",
+    "for i in range(0, 1000):\n",
+    "    if len(str(i)) == 1:\n",
+    "        code = '9200' + str(i)\n",
+    "        zip_list.append(code)\n",
+    "    elif len(str(i)) == 2:\n",
+    "        code = '920' + str(i)\n",
+    "        zip_list.append(code)\n",
+    "    else:\n",
+    "        code = '92' + str(i)\n",
+    "        zip_list.append(code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Population\n",
+      "35,623\n",
+      "100%\n",
+      "White\n",
+      "20,971\n",
+      "59%\n",
+      "Hispanic\n",
+      "7,600\n",
+      "21%\n",
+      "Black\n",
+      "3,060\n",
+      "9%\n",
+      "Asian\n",
+      "2,565\n",
+      "7%\n",
+      "Two or More\n",
+      "1,058\n",
+      "3%\n",
+      "American Indian\n",
+      "181\n",
+      "1%\n",
+      "Other\n",
+      "102\n",
+      "<1%\n",
+      "Pacific Islander\n",
+      "86\n",
+      "<1%\n"
+     ]
+    }
+   ],
+   "source": [
+    "file = 'zip_pop_data\\\\sandag_census_2010_zip_'\n",
+    "file = os.path.relpath(file + str(92101) + '.pdf')\n",
+    "fpdf = pdf.PdfFileReader(file)\n",
+    "text = fpdf.getPage(0).extractText()\n",
+    "index = text.find('Population\\nPercent\\nTotal Population')\n",
+    "indexEnd = text.find('Source: SANDAG, Current Estimates (2010)\\nPopulation by Race')\n",
+    "print(text[index+19:indexEnd-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'sandag_census_2010_zip_92037.pdf'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-194-02d68c6fd847>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;31m#file = os.path.relpath(file + currZip + '.pdf')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0mfile\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfsdecode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcurrZip\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m     \u001b[0mfpdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mPdfFileReader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m     \u001b[0mpage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfpdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetPage\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextractText\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpage\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Population\\nPercent\\nTotal Population'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\PyPDF2\\pdf.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, stream, strict, warndest, overwriteWarnings)\u001b[0m\n\u001b[0;32m   1079\u001b[0m             \u001b[0mwarnings\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwarn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"PdfFileReader stream/file object is not in binary mode. It may not be read correctly.\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mutils\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mPdfReadWarning\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1080\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0misString\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstream\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1081\u001b[1;33m             \u001b[0mfileobj\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstream\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'rb'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1082\u001b[0m             \u001b[0mstream\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mBytesIO\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfileobj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1083\u001b[0m             \u001b[0mfileobj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'sandag_census_2010_zip_92037.pdf'"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "file = 'zip_pop_data\\\\sandag_census_2010_zip_'\n",
+    "for currZip in os.listdir('zip_pop_data'):    \n",
+    "    #file = file + currZip + '.pdf'\n",
+    "    #file = os.path.relpath(file + currZip + '.pdf')\n",
+    "    file = os.fsdecode(currZip)\n",
+    "    fpdf = pdf.PdfFileReader(file)\n",
+    "    page = fpdf.getPage(0).extractText()\n",
+    "    index = page.find('Population\\nPercent\\nTotal Population')\n",
+    "    indexEnd = page.find('Source: SANDAG, Current Estimates (2010)\\nPopulation by Race')\n",
+    "    text = page[index+19:indexEnd-1]\n",
+    "    text = list(text)\n",
+    "    #text.replace(\"\\n\", \",\")\n",
+    "    for index, item in enumerate(text):\n",
+    "        if item == \"\\n\":\n",
+    "            text[index] = '/'\n",
+    "\n",
+    "    text = ''.join(text)\n",
+    "    text = text.split('/')\n",
+    "    groups = list()\n",
+    "    percentages = list()\n",
+    "    populations = list()\n",
+    "    cols = ['Group', 'Population', 'Percent']\n",
+    "\n",
+    "    for item in text:\n",
+    "        if '%' in item:\n",
+    "            percentages.append(item)\n",
+    "        elif item[0].isnumeric():\n",
+    "            populations.append(item)\n",
+    "        else:\n",
+    "            groups.append(item) \n",
+    "\n",
+    "\n",
+    "    p_df = pd.DataFrame(columns = cols)\n",
+    "    p_df['Group'] = groups\n",
+    "    p_df['Population'] = populations\n",
+    "    p_df['Percent'] = percentages\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +340,7 @@
        "8             Other         23     <1%"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,6 +365,7 @@
     "groups = list()\n",
     "percentages = list()\n",
     "populations = list()\n",
+    "cols = ['Group', 'Population', 'Percent']\n",
     "\n",
     "for item in text:\n",
     "    if '%' in item:\n",
@@ -245,13 +375,12 @@
     "    else:\n",
     "        groups.append(item) \n",
     "    \n",
-    "cols = ['Group', 'Population', 'Percent']\n",
+    "\n",
     "p_df = pd.DataFrame(columns = cols)\n",
     "p_df['Group'] = groups\n",
     "p_df['Population'] = populations\n",
     "p_df['Percent'] = percentages\n",
-    "p_df\n",
-    "#print(fpdf.getPage(0).extractText())\n"
+    "p_df\n"
    ]
   },
   {
