downloads pds files and scrapes them for info

--- a/Project testing.ipynb
+++ b/Project testing.ipynb
@@ -180,37 +180,351 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import urllib.request\n",
+    "from fpdf import FPDF\n",
+    "import PyPDF2\n",
+    "\n",
+    "def download_file(input):\n",
+    "    url = 'http://datasurfer.sandag.org/download/sandag_census_2010_zip_' + input + '.pdf'\n",
+    "    response = urllib.request.urlopen(url)\n",
+    "    file = open(input + '.pdf', 'wb')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'sandag_census_2010_zip_92037.pdf'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-194-02d68c6fd847>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;31m#file = os.path.relpath(file + currZip + '.pdf')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0mfile\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfsdecode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcurrZip\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m     \u001b[0mfpdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mPdfFileReader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m     \u001b[0mpage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfpdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetPage\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextractText\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpage\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Population\\nPercent\\nTotal Population'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\PyPDF2\\pdf.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, stream, strict, warndest, overwriteWarnings)\u001b[0m\n\u001b[0;32m   1079\u001b[0m             \u001b[0mwarnings\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwarn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"PdfFileReader stream/file object is not in binary mode. It may not be read correctly.\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mutils\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mPdfReadWarning\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1080\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0misString\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstream\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1081\u001b[1;33m             \u001b[0mfileobj\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstream\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'rb'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1082\u001b[0m             \u001b[0mstream\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mBytesIO\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfileobj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1083\u001b[0m             \u001b[0mfileobj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'sandag_census_2010_zip_92037.pdf'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sandag_census_2010_zip_92037.pdf\n",
+      "              Group Population Percent\n",
+      "0  Total Population     38,652    100%\n",
+      "1             White     29,300     76%\n",
+      "2             Asian      4,305     11%\n",
+      "3          Hispanic      3,371      9%\n",
+      "4       Two or More      1,164      3%\n",
+      "5             Black        300      1%\n",
+      "6             Other        136     <1%\n",
+      "7  Pacific Islander         39     <1%\n",
+      "8   American Indian         37     <1%\n",
+      "\n",
+      "\n",
+      "sandag_census_2010_zip_92101.pdf\n",
+      "              Group Population Percent\n",
+      "0  Total Population     35,623    100%\n",
+      "1             White     20,971     59%\n",
+      "2          Hispanic      7,600     21%\n",
+      "3             Black      3,060      9%\n",
+      "4             Asian      2,565      7%\n",
+      "5       Two or More      1,058      3%\n",
+      "6   American Indian        181      1%\n",
+      "7             Other        102     <1%\n",
+      "8  Pacific Islander         86     <1%\n",
+      "\n",
+      "\n",
+      "sandag_census_2010_zip_92102.pdf\n",
+      "              Group Population Percent\n",
+      "0  Total Population     42,967    100%\n",
+      "1          Hispanic     26,906     63%\n",
+      "2             White      8,174     19%\n",
+      "3             Black      4,237     10%\n",
+      "4             Asian      2,490      6%\n",
+      "5       Two or More        819      2%\n",
+      "6  Pacific Islander        144     <1%\n",
+      "7   American Indian        102     <1%\n",
+      "8             Other         95     <1%\n",
+      "\n",
+      "\n",
+      "sandag_census_2010_zip_92103.pdf\n",
+      "              Group Population Percent\n",
+      "0  Total Population     30,680    100%\n",
+      "1             White     22,506     73%\n",
+      "2          Hispanic      4,447     14%\n",
+      "3             Asian      1,756      6%\n",
+      "4       Two or More        879      3%\n",
+      "5             Black        848      3%\n",
+      "6   American Indian        105     <1%\n",
+      "7             Other         78     <1%\n",
+      "8  Pacific Islander         61     <1%\n",
+      "\n",
+      "\n",
+      "sandag_census_2010_zip_92104.pdf\n",
+      "              Group Population Percent\n",
+      "0  Total Population     44,947    100%\n",
+      "1             White     20,990     47%\n",
+      "2          Hispanic     15,590     35%\n",
+      "3             Black      3,891      9%\n",
+      "4             Asian      2,525      6%\n",
+      "5       Two or More      1,480      3%\n",
+      "6   American Indian        188     <1%\n",
+      "7  Pacific Islander        162     <1%\n",
+      "8             Other        121     <1%\n",
+      "\n",
+      "\n",
+      "sandag_census_2010_zip_92105.pdf\n",
+      "              Group Population Percent\n",
+      "0  Total Population     70,270    100%\n",
+      "1          Hispanic     38,011     54%\n",
+      "2             Asian     12,566     18%\n",
+      "3             Black      9,304     13%\n",
+      "4             White      8,362     12%\n",
+      "5       Two or More      1,493      2%\n",
+      "6  Pacific Islander        218     <1%\n",
+      "7   American Indian        178     <1%\n",
+      "8             Other        138     <1%\n",
+      "\n",
+      "\n",
+      "sandag_census_2010_zip_92106.pdf\n",
+      "              Group Population Percent\n",
+      "0  Total Population     21,847    100%\n",
+      "1             White     17,237     79%\n",
+      "2          Hispanic      2,440     11%\n",
+      "3             Asian        716      3%\n",
+      "4       Two or More        613      3%\n",
+      "5             Black        602      3%\n",
+      "6             Other         89     <1%\n",
+      "7   American Indian         83     <1%\n",
+      "8  Pacific Islander         67     <1%\n",
+      "\n",
+      "\n",
+      "sandag_census_2010_zip_92107.pdf\n",
+      "              Group Population Percent\n",
+      "0  Total Population     26,929    100%\n",
+      "1             White     22,066     82%\n",
+      "2          Hispanic      2,814     10%\n",
+      "3       Two or More        730      3%\n",
+      "4             Asian        644      2%\n",
+      "5             Black        394      1%\n",
+      "6             Other        127     <1%\n",
+      "7   American Indian        100     <1%\n",
+      "8  Pacific Islander         54     <1%\n",
+      "\n",
+      "\n",
+      "sandag_census_2010_zip_92109.pdf\n",
+      "              Group Population Percent\n",
+      "0  Total Population     45,802    100%\n",
+      "1             White     36,523     80%\n",
+      "2          Hispanic      5,562     12%\n",
+      "3             Asian      1,508      3%\n",
+      "4       Two or More      1,242      3%\n",
+      "5             Black        570      1%\n",
+      "6             Other        171     <1%\n",
+      "7   American Indian        125     <1%\n",
+      "8  Pacific Islander        101     <1%\n",
+      "\n",
+      "\n",
+      "sandag_census_2010_zip_92110.pdf\n",
+      "              Group Population Percent\n",
+      "0  Total Population     23,852    100%\n",
+      "1             White     15,903     67%\n",
+      "2          Hispanic      4,308     18%\n",
+      "3             Asian      1,253      5%\n",
+      "4             Black      1,210      5%\n",
+      "5       Two or More        899      4%\n",
+      "6             Other        109     <1%\n",
+      "7  Pacific Islander         93     <1%\n",
+      "8   American Indian         77     <1%\n",
+      "\n",
+      "\n",
+      "sandag_census_2010_zip_92111.pdf\n",
+      "              Group Population Percent\n",
+      "0  Total Population     47,870    100%\n",
+      "1             White     21,691     45%\n",
+      "2          Hispanic     12,899     27%\n",
+      "3             Asian      8,435     18%\n",
+      "4             Black      2,548      5%\n",
+      "5       Two or More      1,746      4%\n",
+      "6  Pacific Islander        235     <1%\n",
+      "7   American Indian        178     <1%\n",
+      "8             Other        138     <1%\n",
+      "\n",
+      "\n",
+      "sandag_census_2010_zip_92113.pdf\n",
+      "              Group Population Percent\n",
+      "0  Total Population     51,210    100%\n",
+      "1          Hispanic     40,059     78%\n",
+      "2             Black      6,171     12%\n",
+      "3             White      2,637      5%\n",
+      "4             Asian      1,397      3%\n",
+      "5       Two or More        562      1%\n",
+      "6  Pacific Islander        235     <1%\n",
+      "7   American Indian         94     <1%\n",
+      "8             Other         55     <1%\n",
+      "\n",
+      "\n",
+      "sandag_census_2010_zip_92114.pdf\n",
+      "              Group Population Percent\n",
+      "0  Total Population     65,433    100%\n",
+      "1          Hispanic     26,767     41%\n",
+      "2             Asian     15,287     23%\n",
+      "3             Black     14,666     22%\n",
+      "4             White      5,687      9%\n",
+      "5       Two or More      2,050      3%\n",
+      "6  Pacific Islander        729      1%\n",
+      "7   American Indian        148     <1%\n",
+      "8             Other         99     <1%\n",
+      "\n",
+      "\n",
+      "sandag_census_2010_zip_92115.pdf\n",
+      "              Group Population Percent\n",
+      "0  Total Population     56,694    100%\n",
+      "1             White     23,236     41%\n",
+      "2          Hispanic     16,773     30%\n",
+      "3             Asian      8,163     14%\n",
+      "4             Black      6,090     11%\n",
+      "5       Two or More      1,889      3%\n",
+      "6  Pacific Islander        215     <1%\n",
+      "7   American Indian        166     <1%\n",
+      "8             Other        162     <1%\n",
+      "\n",
+      "\n",
+      "sandag_census_2010_zip_92116.pdf\n",
+      "              Group Population Percent\n",
+      "0  Total Population     31,439    100%\n",
+      "1             White     17,253     55%\n",
+      "2          Hispanic      8,935     28%\n",
+      "3             Black      2,478      8%\n",
+      "4             Asian      1,460      5%\n",
+      "5       Two or More        996      3%\n",
+      "6   American Indian        117     <1%\n",
+      "7  Pacific Islander        104     <1%\n",
+      "8             Other         96     <1%\n",
+      "\n",
+      "\n",
+      "sandag_census_2010_zip_92117.pdf\n",
+      "              Group Population Percent\n",
+      "0  Total Population     50,617    100%\n",
+      "1             White     31,446     62%\n",
+      "2          Hispanic     11,201     22%\n",
+      "3             Asian      4,715      9%\n",
+      "4       Two or More      1,761      3%\n",
+      "5             Black      1,008      2%\n",
+      "6  Pacific Islander        192     <1%\n",
+      "7   American Indian        160     <1%\n",
+      "8             Other        134     <1%\n",
+      "\n",
+      "\n",
+      "sandag_census_2010_zip_92118.pdf\n",
+      "              Group Population Percent\n",
+      "0  Total Population     17,041    100%\n",
+      "1             White     13,677     80%\n",
+      "2          Hispanic      2,043     12%\n",
+      "3             Asian        476      3%\n",
+      "4       Two or More        464      3%\n",
+      "5             Black        252      1%\n",
+      "6   American Indian         65     <1%\n",
+      "7  Pacific Islander         41     <1%\n",
+      "8             Other         23     <1%\n",
+      "\n",
+      "\n",
+      "sandag_census_2010_zip_92122.pdf\n",
+      "              Group Population Percent\n",
+      "0  Total Population     43,382    100%\n",
+      "1             White     23,612     54%\n",
+      "2             Asian     13,321     31%\n",
+      "3          Hispanic      4,083      9%\n",
+      "4       Two or More      1,464      3%\n",
+      "5             Black        635      1%\n",
+      "6             Other        139     <1%\n",
+      "7  Pacific Islander         72     <1%\n",
+      "8   American Indian         56     <1%\n",
+      "\n",
+      "\n",
+      "sandag_census_2010_zip_92136.pdf\n",
+      "              Group Population Percent\n",
+      "0  Total Population     11,549    100%\n",
+      "1             White      5,642     49%\n",
+      "2          Hispanic      2,522     22%\n",
+      "3             Black      1,869     16%\n",
+      "4             Asian        904      8%\n",
+      "5       Two or More        420      4%\n",
+      "6   American Indian         90      1%\n",
+      "7  Pacific Islander         69      1%\n",
+      "8             Other         33     <1%\n",
+      "\n",
+      "\n",
+      "sandag_census_2010_zip_92139.pdf\n",
+      "              Group Population Percent\n",
+      "0  Total Population     35,082    100%\n",
+      "1          Hispanic     13,108     37%\n",
+      "2             Asian     11,003     31%\n",
+      "3             White      4,610     13%\n",
+      "4             Black      4,412     13%\n",
+      "5       Two or More      1,402      4%\n",
+      "6  Pacific Islander        417      1%\n",
+      "7             Other         75     <1%\n",
+      "8   American Indian         55     <1%\n",
+      "\n",
+      "\n",
+      "sandag_census_2010_zip_92140.pdf\n",
+      "              Group Population Percent\n",
+      "0  Total Population      3,435    100%\n",
+      "1             White      2,400     70%\n",
+      "2          Hispanic        644     19%\n",
+      "3             Black        141      4%\n",
+      "4       Two or More         94      3%\n",
+      "5             Asian         87      3%\n",
+      "6   American Indian         45      1%\n",
+      "7  Pacific Islander         16     <1%\n",
+      "8             Other          8     <1%\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sandag_census_2010_zip_92154.pdf\n",
+      "              Group Population Percent\n",
+      "0  Total Population     79,233    100%\n",
+      "1          Hispanic     52,298     66%\n",
+      "2             Asian     10,322     13%\n",
+      "3             White     10,191     13%\n",
+      "4             Black      3,983      5%\n",
+      "5       Two or More      1,777      2%\n",
+      "6  Pacific Islander        261     <1%\n",
+      "7             Other        248     <1%\n",
+      "8   American Indian        153     <1%\n",
+      "\n",
+      "\n",
+      "sandag_census_2010_zip_92173.pdf\n",
+      "              Group Population Percent\n",
+      "0  Total Population     29,318    100%\n",
+      "1          Hispanic     27,216     93%\n",
+      "2             White        835      3%\n",
+      "3             Asian        658      2%\n",
+      "4             Black        375      1%\n",
+      "5       Two or More        158      1%\n",
+      "6  Pacific Islander         43     <1%\n",
+      "7   American Indian         17     <1%\n",
+      "8             Other         16     <1%\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "import os\n",
     "\n",
-    "file = 'zip_pop_data\\\\sandag_census_2010_zip_'\n",
+    "currDir = 'zip_pop_data\\\\'\n",
     "for currZip in os.listdir('zip_pop_data'):    \n",
-    "    #file = file + currZip + '.pdf'\n",
-    "    #file = os.path.relpath(file + currZip + '.pdf')\n",
     "    file = os.fsdecode(currZip)\n",
-    "    fpdf = pdf.PdfFileReader(file)\n",
+    "    fpdf = pdf.PdfFileReader(currDir + file)\n",
     "    page = fpdf.getPage(0).extractText()\n",
+    "    \n",
+    "    # Gets the beginning and end of the data we want\n",
     "    index = page.find('Population\\nPercent\\nTotal Population')\n",
     "    indexEnd = page.find('Source: SANDAG, Current Estimates (2010)\\nPopulation by Race')\n",
     "    text = page[index+19:indexEnd-1]\n",
     "    text = list(text)\n",
-    "    #text.replace(\"\\n\", \",\")\n",
     "    for index, item in enumerate(text):\n",
     "        if item == \"\\n\":\n",
     "            text[index] = '/'\n",
@@ -234,7 +548,10 @@
     "    p_df = pd.DataFrame(columns = cols)\n",
     "    p_df['Group'] = groups\n",
     "    p_df['Population'] = populations\n",
-    "    p_df['Percent'] = percentages\n"
+    "    p_df['Percent'] = percentages\n",
+    "    print(file)\n",
+    "    print(p_df)\n",
+    "    print('\\n')\n"
    ]
   },
   {
