search for specific zip

--- a/Project testing.ipynb
+++ b/Project testing.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -60,8 +60,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Gordee\\Anaconda3\\lib\\site-packages\\statsmodels\\compat\\pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
-      "  from pandas.core import datetools\n"
+      "FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead. [pandas.py:56]\n"
      ]
     }
    ],
@@ -106,6 +105,163 @@
    "outputs": [],
    "source": [
     "print(df_stops_info.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Group</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Percent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Total Population</td>\n",
+       "      <td>13,432</td>\n",
+       "      <td>100%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>White</td>\n",
+       "      <td>11,481</td>\n",
+       "      <td>85%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Asian</td>\n",
+       "      <td>797</td>\n",
+       "      <td>6%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Hispanic</td>\n",
+       "      <td>686</td>\n",
+       "      <td>5%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Two or More</td>\n",
+       "      <td>329</td>\n",
+       "      <td>2%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Black</td>\n",
+       "      <td>75</td>\n",
+       "      <td>1%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Other</td>\n",
+       "      <td>46</td>\n",
+       "      <td>&lt;1%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>American Indian</td>\n",
+       "      <td>11</td>\n",
+       "      <td>&lt;1%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Pacific Islander</td>\n",
+       "      <td>7</td>\n",
+       "      <td>&lt;1%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Group Population Percent\n",
+       "0  Total Population     13,432    100%\n",
+       "1             White     11,481     85%\n",
+       "2             Asian        797      6%\n",
+       "3          Hispanic        686      5%\n",
+       "4       Two or More        329      2%\n",
+       "5             Black         75      1%\n",
+       "6             Other         46     <1%\n",
+       "7   American Indian         11     <1%\n",
+       "8  Pacific Islander          7     <1%"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "################# function to get population data from a specific zip code ######################\n",
+    "import os\n",
+    "import PyPDF2 as pdf\n",
+    "\n",
+    "def get_zip_info(code):\n",
+    "    currDir = 'zip_pop_data\\\\'\n",
+    "    try:\n",
+    "        file = currDir + code + '.pdf'\n",
+    "        fpdf = pdf.PdfFileReader(file)\n",
+    "        page = fpdf.getPage(0).extractText()\n",
+    "\n",
+    "        # Gets the beginning and end of the data we want\n",
+    "        index = page.find('Population\\nPercent\\nTotal Population')\n",
+    "        indexEnd = page.find('Source: SANDAG, Current Estimates (2010)\\nPopulation by Race')\n",
+    "        text = page[index+19:indexEnd-1]\n",
+    "        text = list(text)\n",
+    "        for index, item in enumerate(text):\n",
+    "            if item == \"\\n\":\n",
+    "                text[index] = '/'\n",
+    "\n",
+    "        text = ''.join(text)\n",
+    "        text = text.split('/')\n",
+    "        groups = list()\n",
+    "        percentages = list()\n",
+    "        populations = list()\n",
+    "        cols = ['Group', 'Population', 'Percent']\n",
+    "\n",
+    "        for item in text:\n",
+    "            if '%' in item:\n",
+    "                percentages.append(item)\n",
+    "            elif item[0].isnumeric():\n",
+    "                populations.append(item)\n",
+    "            else:\n",
+    "                groups.append(item) \n",
+    "\n",
+    "\n",
+    "        p_df = pd.DataFrame(columns = cols)\n",
+    "        p_df['Group'] = groups\n",
+    "        p_df['Population'] = populations\n",
+    "        p_df['Percent'] = percentages\n",
+    "        return p_df\n",
+    "    except PermissionError:\n",
+    "        print('error')\n",
+    "        \n",
+    "df = get_zip_info('92014')\n",
+    "df"
    ]
   },
   {
