--- a/Project testing.ipynb
+++ b/Project testing.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -142,55 +142,55 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Total Population</td>\n",
-       "      <td>13,432</td>\n",
+       "      <td>48,275</td>\n",
        "      <td>100%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>White</td>\n",
-       "      <td>11,481</td>\n",
-       "      <td>85%</td>\n",
+       "      <td>Hispanic</td>\n",
+       "      <td>25,714</td>\n",
+       "      <td>53%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Asian</td>\n",
-       "      <td>797</td>\n",
-       "      <td>6%</td>\n",
+       "      <td>White</td>\n",
+       "      <td>18,382</td>\n",
+       "      <td>38%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Hispanic</td>\n",
-       "      <td>686</td>\n",
-       "      <td>5%</td>\n",
+       "      <td>Asian</td>\n",
+       "      <td>1,986</td>\n",
+       "      <td>4%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Two or More</td>\n",
-       "      <td>329</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>935</td>\n",
        "      <td>2%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Black</td>\n",
-       "      <td>75</td>\n",
-       "      <td>1%</td>\n",
+       "      <td>Two or More</td>\n",
+       "      <td>857</td>\n",
+       "      <td>2%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Other</td>\n",
-       "      <td>46</td>\n",
+       "      <td>American Indian</td>\n",
+       "      <td>215</td>\n",
        "      <td>&lt;1%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>American Indian</td>\n",
-       "      <td>11</td>\n",
+       "      <td>Pacific Islander</td>\n",
+       "      <td>97</td>\n",
        "      <td>&lt;1%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Pacific Islander</td>\n",
-       "      <td>7</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>89</td>\n",
        "      <td>&lt;1%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -199,18 +199,18 @@
       ],
       "text/plain": [
        "              Group Population Percent\n",
-       "0  Total Population     13,432    100%\n",
-       "1             White     11,481     85%\n",
-       "2             Asian        797      6%\n",
-       "3          Hispanic        686      5%\n",
-       "4       Two or More        329      2%\n",
-       "5             Black         75      1%\n",
-       "6             Other         46     <1%\n",
-       "7   American Indian         11     <1%\n",
-       "8  Pacific Islander          7     <1%"
+       "0  Total Population     48,275    100%\n",
+       "1          Hispanic     25,714     53%\n",
+       "2             White     18,382     38%\n",
+       "3             Asian      1,986      4%\n",
+       "4             Black        935      2%\n",
+       "5       Two or More        857      2%\n",
+       "6   American Indian        215     <1%\n",
+       "7  Pacific Islander         97     <1%\n",
+       "8             Other         89     <1%"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,6 @@
     "            else:\n",
     "                groups.append(item) \n",
     "\n",
-    "\n",
     "        p_df = pd.DataFrame(columns = cols)\n",
     "        p_df['Group'] = groups\n",
     "        p_df['Population'] = populations\n",
@@ -260,7 +259,7 @@
     "    except PermissionError:\n",
     "        print('error')\n",
     "        \n",
-    "df = get_zip_info('92014')\n",
+    "df = get_zip_info('92025')\n",
     "df"
    ]
   },
