--- a/Project testing.ipynb
+++ b/Project testing.ipynb
@@ -1897,24 +1897,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                  Population   Percent\n",
-      "Group                                 \n",
-      "Total Population     37569.5       100\n",
-      "White                20672.0   55.0234\n",
-      "Hispanic             13543.0   36.0479\n",
-      "Asian                 1790.0    4.7645\n",
-      "Black                  542.5   1.44399\n",
-      "Two or More            757.5   2.01626\n",
-      "American Indian        118.5  0.315415\n",
-      "Pacific Islander        55.5  0.147726\n",
-      "Other                   90.5  0.240887\n"
+      "                  Population Percent\n",
+      "Group                               \n",
+      "Total Population     37569.5    100%\n",
+      "White                20672.0     55%\n",
+      "Hispanic             13543.0     36%\n",
+      "Asian                 1790.0      4%\n",
+      "Black                  542.5      1%\n",
+      "Two or More            757.5      2%\n",
+      "American Indian        118.5     <1%\n",
+      "Pacific Islander        55.5     <1%\n",
+      "Other                   90.5     <1%\n"
      ]
     }
    ],
@@ -1927,7 +1927,12 @@
     "    \n",
     "    for index, row in df_total.iterrows():\n",
     "        # Calculates the new percentages of the added zip codes\n",
-    "        df_total.loc[index, 'Percent'] = (row['Population'] / df_total['Population'][0] * 100)\n",
+    "        pop = int((row['Population'] / df_total['Population'][0] * 100))\n",
+    "        if pop == 0:\n",
+    "            pop = '<1%'\n",
+    "        else:\n",
+    "            pop = str(pop) + '%'\n",
+    "        df_total.loc[index, 'Percent'] = pop\n",
     "    return df_total\n",
     "\n",
     "testCodes = list(['92014', '1','92025', '.5'])\n",
