--- a/Project testing.ipynb
+++ b/Project testing.ipynb
@@ -1112,15 +1112,12 @@
     "            df_areas[area][0].loc[desc, race] += 1\n",
     "    for item in cols:\n",
     "        for df in df_areas:\n",
-    "            df_areas[df][0].loc['total', item] = df_areas[df][0][item].sum()\n",
-    "\n",
-    "get_code_race_data('1')\n",
-    "print(df_areas['110'][0])"
+    "            df_areas[df][0].loc['total', item] = df_areas[df][0][item].sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 106,
    "metadata": {
     "scrolled": true
    },
@@ -1129,34 +1126,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['0']\n",
-      "1\n",
-      "['92103', '1']\n",
-      "2\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'zip_pop_data\\\\92103.pdf'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-92-1fd339a53e0d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     25\u001b[0m             \u001b[1;32mcontinue\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 27\u001b[1;33m \u001b[0mfill_area_pop_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'2017'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     28\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf_areas\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'110'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-92-1fd339a53e0d>\u001b[0m in \u001b[0;36mfill_area_pop_data\u001b[1;34m(year)\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcodes\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0marea\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;34m'Unknown'\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcodes\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m             \u001b[0mdf_total\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_zip_info\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcodes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcodes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mindex\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcodes\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m                 \u001b[0mdf_temp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_zip_info\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcodes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcodes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-19-c1cdf35ef6d3>\u001b[0m in \u001b[0;36mget_zip_info\u001b[1;34m(code, percent)\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[0mfile\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcurrDir\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mcode\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'.pdf'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m         \u001b[0mfpdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mPdfFileReader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m         \u001b[0mpage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfpdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetPage\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextractText\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\PyPDF2\\pdf.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, stream, strict, warndest, overwriteWarnings)\u001b[0m\n\u001b[0;32m   1079\u001b[0m             \u001b[0mwarnings\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwarn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"PdfFileReader stream/file object is not in binary mode. It may not be read correctly.\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mutils\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mPdfReadWarning\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1080\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0misString\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstream\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1081\u001b[1;33m             \u001b[0mfileobj\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstream\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'rb'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1082\u001b[0m             \u001b[0mstream\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mBytesIO\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfileobj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1083\u001b[0m             \u001b[0mfileobj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'zip_pop_data\\\\92103.pdf'"
+      "                  Population Percent\n",
+      "Group                               \n",
+      "Total Population    141835.0    100%\n",
+      "White                78772.0     55%\n",
+      "Hispanic             27326.0     19%\n",
+      "Asian                25285.0     17%\n",
+      "Black                 4165.0      2%\n",
+      "Two or More           4981.0      3%\n",
+      "American Indian        389.0     <1%\n",
+      "Pacific Islander       489.0     <1%\n",
+      "Other                  427.0     <1%\n"
      ]
     }
    ],
    "source": [
+    "# Counts the total population for police area\n",
+    "# Since each police area covers multiple zip codes, we must loop through all codes in each area\n",
     "def fill_area_pop_data(year):\n",
     "    for area in df_areas:\n",
     "        codes = get_area_zips(area)\n",
-    "        print(codes)\n",
-    "        print(len(codes))\n",
-    "        if area is not 'Unknown' and len(codes) is not 1:\n",
+    "        if len(codes) is not 1:\n",
     "            df_total = get_zip_info(codes[0], codes[1])\n",
     "            for index in range(2,len(codes)-1, 2):\n",
     "                df_temp = get_zip_info(codes[index], codes[index+1])\n",
@@ -1175,15 +1165,12 @@
     "\n",
     "            df_areas[area][1] = df_total\n",
     "        else:\n",
-    "            continue\n",
-    "            \n",
-    "fill_area_pop_data('2017')\n",
-    "print(df_areas['110'][1])"
+    "            continue"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 104,
    "metadata": {
     "scrolled": false
    },
@@ -1197,12 +1184,13 @@
     }
    ],
    "source": [
-    "\n",
+    "# Function that maps zip codes to police areas\n",
     "def get_area_zips(area):\n",
     "    code_dict = {'110':list(['92122', '1', '92117', '1', '92111', '0.8', '92110', '0.4' ]),\n",
     "                '120': list(['92109', '1', '92037', '1']),\n",
+    "                '130': list(['0']),\n",
     "                '230': list(['92129', '1', '92128', '1', '92127', '0.3', '92025', '0.3']),\n",
-    "                '240': list(['92145', '1', '92126', '1', '92131', '1', '92137', '1']),\n",
+    "                '240': list(['92145', '1', '92126', '1', '92131', '1']),\n",
     "                '310': list(['92123', '1', '92124', '1', '92108', '1', '92111', '0.2']),\n",
     "                '320': list(['92120', '1', '92119', '1']),\n",
     "                '430': list(['92139', '1', '92114', '1']),\n",
@@ -1210,7 +1198,7 @@
     "                '510': list(['92113', '0.5', '92102', '0.6']),\n",
     "                '520': list(['92101', '1']),\n",
     "                '530': list(['0']),\n",
-    "                '610': list(['92107', '1', '92106', '1', '92140', '1', '92152', '1', '92110', '0.6']),\n",
+    "                '610': list(['92107', '1', '92106', '1', '92140', '1', '92110', '0.6']),\n",
     "                '620': list(['92103', '1']),\n",
     "                '630': list(['0']),\n",
     "                '710': list(['92173', '1', '92154', '0.4']),\n",
@@ -1219,66 +1207,20 @@
     "                '820': list(['92115', '1', '92116', '0.6']),\n",
     "                '830': list(['92105', '0.8']),\n",
     "                '840': list(['0']),\n",
-    "                '930': list(['92121', '1', '92130', '1', '92014', '1', '92091', '1', '92127', '0.7'])\n",
+    "                '930': list(['92121', '1', '92130', '1', '92014', '1', '92091', '1', '92127', '0.7']),\n",
+    "                'Unknown': list(['0'])\n",
     "                }\n",
-    "    return code_dict[area]\n",
-    "\n",
-    "print(get_area_zips('110')[0])"
+    "    return code_dict[area]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                  Population Percent\n",
-      "Group                               \n",
-      "Total Population     96512.0    100%\n",
-      "White                61684.0     63%\n",
-      "Hispanic              7519.0      7%\n",
-      "Asian                22111.0     22%\n",
-      "Black                 1171.0      1%\n",
-      "Two or More           3528.0      3%\n",
-      "American Indian        120.0     <1%\n",
-      "Pacific Islander       117.0     <1%\n",
-      "Other                  259.0     <1%\n",
-      "\n",
-      "\n",
-      "                      W    B   I    A     H    O\n",
-      "Action                                          \n",
-      "arrest               50   12   0    3    24    5\n",
-      "310                   0    0   0    0     0    2\n",
-      "impound              83   12   0    8    91    8\n",
-      "tow                   3    0   0    0     2    0\n",
-      "released              0    1   0    0     1    0\n",
-      "suspension notice     1    0   0    0     0    0\n",
-      "check plate           0    0   0    0     0    0\n",
-      "passenger            22    9   0    7     6    0\n",
-      "license               0    0   0    0     0    0\n",
-      "dui eval              1    3   0    1     1    0\n",
-      "detention             1    1   0    0     0    0\n",
-      "contact               0    0   0    0     0    0\n",
-      "suspension            0    0   0    0     1    0\n",
-      "suspect               0    0   0    1     2    0\n",
-      "citation           2834  213  24  321   875  433\n",
-      "DMV issue             0    0   0    0     0    0\n",
-      "other                 0    0   0    0     0    0\n",
-      "NaN                   0    0   0    0     0    0\n",
-      "total              2995  251  24  341  1003  448\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(get_area_pop_data(get_area_zips('930')))\n",
-    "print('\\n')\n",
-    "print(get_code_race_data('930'))"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1287,8 +1229,8 @@
    "outputs": [],
    "source": [
     "def race_compare(area, race):\n",
-    "    df_pop = get_area_pop_data(get_area_zips(area))\n",
-    "    df_actions = get_code_race_data(area)\n",
+    "    df_pop = df_areas[area]\n",
+    "    df_actions = \n",
     "    switch = {\n",
     "        'W': df_pop.loc['White', 'Population'] / df_actions.loc['total', race],\n",
     "        'B': df_pop.loc['Black', 'Population'] / df_actions.loc['total', race],\n",
